# OpenAI

./: .gitignore  README.md  pyproject.toml
.devcontainer/: cleanup-user-config.py  devcontainer.json  post-create.sh
scripts/: create-feynman-project.sh
src/ouroboros_codex/: cli.py  codex_backend.py  models.py  prompts.py  store.py  workflow.py
tests/: conftest.py  test_codex_backend.py
