[project]
name = "ouroboros-codex"
version = "0.1.0"
description = "Specification-first CLI inspired by Ouroboros, powered by Codex CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.scripts]
ooo = "ouroboros_codex.cli:app"
ouroboros-codex = "ouroboros_codex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ouroboros_codex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
